# eco-sort

./: .gitignore  README.md  pyproject.toml  requirements.txt  train-ml.ipynb  train_cnn.ipynb  yolov8-custom-dataset.ipynb
src/: eco_sort_ai.py  gui.py  main.py
src/eco_sort/: app.py  eco_sort_ai.py  eco_sort_cnn.py
src/service/: blynk_service.py  servo_state.py
src/static/: blynk_server.py  model_types.py
src/static/blynk/: blynk_pins.py  blynk_server.py
src/static/cam/: cam_util.py  camera_index.py
train/: build-dataset-cnn.ipynb  build_dataset_cnn.ipynb  train-ml.ipynb  train_cnn.ipynb  yolov8-ecosort.ipynb
