[project]
name = "eco-sort"
version = "0.1.0"
description = ""
authors = [
    {name = "rediahmds_fedora.ws",email = "redi.ngoding@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "teachable-machine (>=1.2.1,<2.0.0)",
    "ultralytics (>=8.3.127,<9.0.0)",
    "cvzone (>=1.6.1,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
