[project]
name = "eco-sort"
version = "0.1.0"
description = ""
authors = [
    {name = "rediahmds_fedora.ws",email = "redi.ngoding@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "ultralytics (>=8.3.127,<9.0.0)",
    "cvzone (>=1.6.1,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "joblib (>=1.5.1,<2.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "scikit-image (>=0.25.2,<0.26.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "streamlit (>=1.46.1,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
